--- a/src/main/resources/static/views/home.html
+++ b/src/main/resources/static/views/home.html
@@ -1,4 +1,4 @@
-<div class="card-panel">
+<div class="card-panel" ng-init="tampilkanData()">
     <h4 class="light">Data Siswa</h4>
     <div class="row">
         <div class="col s12 m6">
@@ -23,9 +23,6 @@
                     <button class="btn waves-effect waves-light" ng-click="simpanData(currentSiswa)">Simpan</button>
                 </div>
             </div>
-        </div>
-        <div class="col s12 m6 right-align">
-            <button ng-click="tampilkanData()" class="btn waves-effect waves-light">Tampilkan Data</button>
         </div>
     </div>
     
